Bug: 67609 - Message doesn't show highlighted on right clicking in conversation view In the new conv view, select a msg when it's right-clicked. Clear the selection when the actions menu pops down. - Darken the msg focus border a bit in new conv view - Fix the background color for list view actioned row - Fix the broken regex that resulted in a row having "-actioned" by itself added every time it was right-clicked - Don't honor right-click if Shift or Ctrl modifier is present - Fix bug that broke clearing of right-click selection in list view on menu popdown
http://bugzilla.zimbra.com/show_bug.cgi?id=67609

Copied from Perforce
 Change: 341716

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -763,7 +763,7 @@ INPUT[type="text"].search_input, INPUT[type="text"].search_input-expanded {
 }
 
 .ZmMailMsgCapsuleView.focused {
-	border-color:@darken(SelC,10)@;
+	border-color:@darken(SelC,50)@;
 }
 
 .ZmMailMsgCapsuleView .SubjectCol {
